nubis/cloudformation/templates/resources.json
{
  "AWSTemplateFormatVersion": "2010-09-09",

  "Resources": {
    "EC2SecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Inbound traffic rules",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "0",
            "ToPort": "22",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "0",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "8300",
            "ToPort": "8303",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "udp",
            "FromPort": "8300",
            "ToPort": "8303",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "AWS::StackName"
            }
          }
        ]
      }
    },
    "EC2Instance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": {
          "Fn::FindInMap": [
            "RegionMap",
            {
              "Ref": "AWS::Region"
            },
            "AMI"
          ]
        },
        "InstanceType": {
          "Fn::FindInMap": [
            "InstanceTypeMap",
            {
              "Ref": "EnvType"
            },
            "InstanceType"
          ]
        },
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "EC2SecurityGroup",
              "GroupId"
            ]
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "AWS::StackName"
            }
          }
        ]
      }
    },
    "ELB": {
      "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
      "Properties": {
        "AvailabilityZones": [
          "us-west-2a",
          "us-west-2b",
          "us-west-2c"
        ],
        "CrossZone": true,
        "Listeners": [
          {
            "InstancePort": "80",
            "InstanceProtocol": "HTTP",
            "LoadBalancerPort": "80",
            "Protocol": "HTTP"
          }
        ],
        "HealthCheck": {
          "HealthyThreshold": "2",
          "UnhealthyThreshold": "2",
          "Timeout": "3",
          "Target": "HTTP:80/Special%3AVersion",
          "Interval": "30"
        },
        "Instances": [
          {
            "Ref": "EC2Instance"
          }
        ]
      }
    },
    "RDSInstance": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "AllocatedStorage": "10",
        "DBInstanceClass": "db.t1.micro",
        "Engine": "mysql",
        "EngineVersion": "5.6.22",
        "DBSecurityGroups": [
          {
            "Ref": "RDSSecurityGroup"
          }
        ],
        "MasterUsername": "mediawiki",
        "MasterUserPassword": "provisioner_password",
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "AWS::StackName"
            }
          }
        ]
      }
    },
    "RDSSecurityGroup": {
      "Type": "AWS::RDS::DBSecurityGroup",
      "Properties": {
        "DBSecurityGroupIngress": {
          "EC2SecurityGroupId": {
            "Fn::GetAtt": [
              "EC2SecurityGroup",
              "GroupId"
            ]
          }
        },
        "GroupDescription": "Front end instance access",
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "AWS::StackName"
            }
          }
        ]
      }
    }
  }
}
